# $Id$

2007-10-01	Dmitry E. Demidov

	* main/Criteria/Projections/HavingProjection.class.php,
	main/Criteria/Projection.class.php: added HavingProjection.

2007-10-01	Dmitry E. Pismenny

	* core/Form/Form.class.php: added isImported check in importMore
	functions.
	
	* main/Flow/View.class.php: added ERROR_VIEW const.

2007-09-26	Dmitry A. Lomash

	* main/Criteria/Projections/GroupByClassProjection.class.php: added.

2007-09-26	Konstantin V. Arkhipov

	* main/Base/DateRange.class.php: now implements SingleRange.

2007-09-25	Dmitry E. Demidov

	* core/OSQL/FieldTable.class.php: getField() added.

	* core/OSQL/OrderBy.class.php: isAsc(), invert(), __clone() added.

2007-09-24	Vladimir A. Altuchov

	* main/Net/Ip/: Ip classes added.

	* main/Base/SingleRange.class.php: range interface added.

2007-09-19	Konstantin V. Arkhipov

	* main/DAOs/Workers/: uncaching fixed in dropByIds().

	* main/Net/Http/CurlHttpClient.class.php: isNoBody() -> hasNoBody().

2007-09-19	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveIdentifierList.class.php:
	always return array after import.

	* core/Form/Primitives/PrimitiveIdentifierList.class.php: importValue()
	now can import data from array of ids or array of Identificable objects.

2007-09-19	Vladimir A. Altuchov

	* main/Net/Http/CurlHttpClient.class.php: no body response available.

2007-09-17	Sergey M. Skachkov

	* core/Form/Filter.class.php: upperCase() added.

2007-09-14	Dmitry E. Pismenny

	* main/Base/Range.class.php: intersects() added.

2007-09-07	Konstantin V. Arkhipov

	* main/Criteria/Projections/MappableObjectProjection.class.php:
	new projection for arbitrary mappable objects.

2007-09-06	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: arrayMergeUnique() renamed to
	mergeUnqie() + variable argument lists are acepted now.

2007-09-04	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: arrayMergeUnique() added.

	* main/Markup/Html/: minor stuff for coming parser.

2007-09-02	Konstantin V. Arkhipov
